
name:                compiler
version:             0.1.0.0
-- synopsis:
-- description:
license-file:        ../LICENSE
author:              Skami
maintainer:          gsou859@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable ulrvmc
  main-is:             Main.hs
  other-modules:       Lexer, Parser, Generate, AST, F, Typechecker
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13, lens, mtl, containers, parsec
  -- hs-source-dirs:
  default-language:    Haskell2010
