
name:                compiler
version:             0.1.1.0
-- synopsis:
-- description:
license-file:        ../LICENSE
author:              Skami
maintainer:          gsou859@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable ulrvmc
  main-is:             Main.hs
  other-modules:       Compiler.Lexer, Compiler.Parser, Compiler.Generate, Compiler.AST, Compiler.F, Compiler.Typechecker
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13, lens, mtl, containers, parsec, bytestring >= 0.10, serialport, split
  -- hs-source-dirs:
  default-language:    Haskell2010
